--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -16,7 +16,7 @@ steps:
       - 'vm-hanief'  # Replace with the name of your Compute Engine VM instance
       - '--zone=asia-southeast2-a'  # Replace with the zone of your Compute Engine VM instance
       - '--command=cd /var/www/html/contacts && git pull origin main'
-    dir: '/var/www/html/contacts'  # Specify the directory where your source code is cloned
+    dir: '/var/www/html/contacts'  # Specify the directory where your source code is cloned # tes
 
   # Step 2: Database migration
   - name: 'gcr.io/cloud-builders/gcloud'
